2009-12-11  Avi Drissman  <avi@chromium.org>

        Reviewed by Darin Fisher.

        Tickmarks in the scrollbar are not cleared for non-main frames
        https://bugs.webkit.org/show_bug.cgi?id=32385

        * src/WebFrameImpl.cpp:
        (WebKit::WebFrameImpl::stopFinding):

2009-12-11  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Pavel Feldman.

        Remove obsolete message handling methods from WebDevTools* interfaces

        https://bugs.webkit.org/show_bug.cgi?id=32320

        * public/WebDevToolsAgent.h:
        * public/WebDevToolsAgentClient.h:
        * public/WebDevToolsFrontend.h:
        * public/WebDevToolsFrontendClient.h:

2009-12-10  Mike Belshe  <mike@belshe.com>

        Unreviewed, build fix for chromium.

        * src/FrameLoaderClientImpl.cpp:
        (WebKit::FrameLoaderClientImpl::dispatchWillSendRequest):

2009-12-10  Kenneth Russell  <kbr@google.com>

        Reviewed by Oliver Hunt.

        Changed WebGLRenderingContext to synthesize GL errors rather than
        raising JavaScript exceptions. Removed internal getError() calls
        after each graphics call. The GraphicsContext3D maintains the
        synthetic exceptions because only it has complete information
        about certain conditions requiring them to be raised.

        Based on idea from Ilmari Heikkinen, added create3DDebugContext()
        to webgl-test.js and changed the WebGL layout tests expecting
        error conditions to use it. Updated expected.txt files, which now
        implicitly test the OpenGL error as it is part of the exception's
        message.

        Added new targeted test covering aspects of synthetic errors as
        well as regression tests for bugs uncovered during its development.

        Test: fast/canvas/webgl/error-reporting.html

        * src/GraphicsContext3D.cpp:
        (WebCore::GraphicsContext3DInternal::reshape):
        (WebCore::GraphicsContext3DInternal::getError):